--- a/BookApp/Base.lproj/Main.storyboard
+++ b/BookApp/Base.lproj/Main.storyboard
@@ -10,6 +10,11 @@
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="LibreFranklin-Medium.ttf">
+            <string>LibreFranklin-Medium</string>
+        </array>
+    </customFonts>
     <scenes>
         <!--Create AccountVC-->
         <scene sceneID="Ckt-4I-y9O">
@@ -25,7 +30,7 @@
                                 <state key="normal" title="Create"/>
                                 <connections>
                                     <action selector="createNewUser:" destination="Agn-O5-E7K" eventType="touchUpInside" id="b9l-ru-bTm"/>
-                                    <segue destination="ZZe-2s-gz7" kind="showDetail" identifier="createdUser" id="dPX-Vx-JXC"/>
+                                    <segue destination="ZZe-2s-gz7" kind="push" identifier="createdUser" id="dPX-Vx-JXC"/>
                                 </connections>
                             </button>
                             <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Username" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="46n-kS-jeS">
@@ -76,12 +81,11 @@
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="tintColor" red="0.99951225519999998" green="0.72149991989999995" blue="0.67292386289999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <color key="barTintColor" red="0.13398578759999999" green="0.1429707408" blue="0.30328622459999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <textAttributes key="titleTextAttributes">
-                            <color key="textColor" red="0.99951225519999998" green="0.72149991989999995" blue="0.67292386289999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <color key="textColor" red="0.13398578759999999" green="0.1429707408" blue="0.30328622459999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         </textAttributes>
                         <textAttributes key="largeTitleTextAttributes">
-                            <color key="textColor" red="0.99951225519999998" green="0.72149991989999995" blue="0.67292386289999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <color key="textColor" red="0.13398578759999999" green="0.1429707408" blue="0.30328622459999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         </textAttributes>
                     </navigationBar>
                     <connections>
@@ -97,13 +101,20 @@
             <objects>
                 <viewController id="ZZe-2s-gz7" userLabel="SearchVC" customClass="SearchVC" customModule="BookApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="aCX-vE-JBO">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="603"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <searchBar contentMode="redraw" searchBarStyle="minimal" placeholder="Find Books" translatesAutoresizingMaskIntoConstraints="NO" id="wxE-uQ-YI4">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="56"/>
+                                <color key="barTintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <textInputTraits key="textInputTraits"/>
+                                <connections>
+                                    <outlet property="delegate" destination="ZZe-2s-gz7" id="III-jh-zpC"/>
+                                </connections>
+                            </searchBar>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="u9w-JO-C4y">
-                                <rect key="frame" x="0.0" y="76" width="375" height="591"/>
+                                <rect key="frame" x="0.0" y="56" width="375" height="547"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <color key="separatorColor" red="0.20119422674179077" green="0.21395644545555115" blue="0.41584703326225281" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <inset key="separatorInset" minX="20" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="bookCell" rowHeight="140" id="zja-Rd-BXz" customClass="TableViewCell" customModule="BookApp" customModuleProvider="target">
@@ -116,8 +127,8 @@
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Harry Potter and the book title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WlY-MC-FDD">
                                                     <rect key="frame" x="112" y="45" width="237" height="21"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                    <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
-                                                    <color key="textColor" red="0.99951225519999998" green="0.72149991989999995" blue="0.67292386289999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    <fontDescription key="fontDescription" name="LibreFranklin-Medium" family="Libre Franklin" pointSize="17"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="JK Rowling" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="55e-Wk-McW">
@@ -127,35 +138,24 @@
                                                     <color key="textColor" red="0.71768340805695563" green="0.76137667032010203" blue="0.86645650591341972" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="tempCover" translatesAutoresizingMaskIntoConstraints="NO" id="mrE-s4-3Ca">
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="mrE-s4-3Ca">
                                                     <rect key="frame" x="19" y="22" width="67" height="94"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <color key="backgroundColor" red="0.8897128807106599" green="0.86349474722096964" blue="0.86587354549248763" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 </imageView>
                                             </subviews>
-                                            <color key="backgroundColor" red="0.13398578763008118" green="0.1429707407951355" blue="0.30328622460365295" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         </tableViewCellContentView>
-                                        <color key="backgroundColor" red="0.13398578759999999" green="0.1429707408" blue="0.30328622459999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <connections>
                                             <outlet property="authorLabel" destination="55e-Wk-McW" id="npc-GB-mLj"/>
                                             <outlet property="coverImage" destination="mrE-s4-3Ca" id="nLH-9K-vHZ"/>
                                             <outlet property="titleLabel" destination="WlY-MC-FDD" id="872-42-Cvz"/>
-                                            <segue destination="BYZ-38-t0r" kind="show" id="PFf-j1-hJt"/>
+                                            <segue destination="BYZ-38-t0r" kind="push" id="PFf-j1-hJt"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
-                            <searchBar contentMode="redraw" searchBarStyle="minimal" placeholder="Find books" translucent="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wxE-uQ-YI4">
-                                <rect key="frame" x="0.0" y="20" width="375" height="56"/>
-                                <color key="backgroundColor" red="0.13398578759999999" green="0.1429707408" blue="0.30328622459999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <color key="barTintColor" red="0.13398578759999999" green="0.1429707408" blue="0.30328622459999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <textInputTraits key="textInputTraits"/>
-                                <connections>
-                                    <outlet property="delegate" destination="ZZe-2s-gz7" id="III-jh-zpC"/>
-                                </connections>
-                            </searchBar>
                         </subviews>
-                        <color key="backgroundColor" red="0.13398578759999999" green="0.1429707408" blue="0.30328622459999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="u9w-JO-C4y" firstAttribute="trailing" secondItem="BCV-Qx-sIw" secondAttribute="trailing" id="Ijn-UP-YrB"/>
                             <constraint firstItem="u9w-JO-C4y" firstAttribute="top" secondItem="wxE-uQ-YI4" secondAttribute="bottom" id="Q6o-rh-jMY"/>
@@ -167,8 +167,15 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="BCV-Qx-sIw"/>
                     </view>
-                    <navigationItem key="navigationItem" title="Find Books" id="3U1-2Z-acT"/>
+                    <navigationItem key="navigationItem" title="Find Adventure" id="3U1-2Z-acT">
+                        <barButtonItem key="rightBarButtonItem" title="Logout" id="L3c-ba-eX8">
+                            <connections>
+                                <action selector="logoutUser:" destination="ZZe-2s-gz7" id="VYw-Wg-cD9"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
+                        <outlet property="logoutBtn" destination="L3c-ba-eX8" id="TiY-eN-xsx"/>
                         <outlet property="searchBar" destination="wxE-uQ-YI4" id="6Jc-JW-xL9"/>
                         <outlet property="tableView" destination="u9w-JO-C4y" id="0N7-3q-KGT"/>
                     </connections>
@@ -182,11 +189,11 @@
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="DetailView" customModule="BookApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="1200"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="1136"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cML-8b-sKL">
-                                <rect key="frame" x="0.0" y="20" width="375" height="1180"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="1136"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vJm-FM-gFa">
                                         <rect key="frame" x="0.0" y="0.0" width="375" height="1200"/>
@@ -278,6 +285,7 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <navigationItem key="navigationItem" id="pVZ-k1-PuU"/>
                     <size key="freeformSize" width="375" height="1200"/>
                     <connections>
                         <outlet property="authorLabel" destination="PB9-PR-NZm" id="prT-N7-6XF"/>
